--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -11,7 +11,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="br.com.moryta.splashscreen.SplashScreenActivity"
     android:gravity="center"
-    android:background="@color/background_splash">
+    android:background="@color/backgroundColorSplash">
 
     <ImageView
         android:id="@+id/splash"
