--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="colorSecondaryText">#757575</color>
     <color name="colorIcons">#FFFFFF</color>
     <color name="colorDivider">#BDBDBD</color>
-    <color name="background_splash">#FFFFFF</color>
+    <color name="backgroundColorSplash">#FFFFFF</color>
+    <color name="colorTitle">#d63b1c</color>
 </resources>
