--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="logo_splash_width">150dp</dimen>
     <dimen name="logo_splash_height">150dp</dimen>
+    <dimen name="title_size">20sp</dimen>
+    <dimen name="footer_size">10sp</dimen>
 </resources>
